syntax = "proto3";

package filemeta;

option go_package = "github.com/bittorrent/go-btfs/protos/metadata";

message AgreementMeta {
  string agreement_id = 1;
  string sp_id = 2;      // Consider renaming to sp_id to align with Greenfield
  string creator_id = 3; // Consider renaming to creator_id
  string shard_hash =
      4; // Different from CID when using -s parameter with reed-solomon
  uint64 shard_index = 5;
  uint64 shard_size = 6;
  uint64 price = 7;
  uint64 amount = 8;
  string token = 9;
  bool auto_renewal = 10;    // Set by user during upload
  uint64 storage_start = 11; // For renewal
  uint64 storage_end = 12;
}

message Agreement {
  AgreementMeta meta = 1;
  bytes sp_signature = 2;
  bytes creator_signature = 3;
  uint64 create_time = 4;
  enum AgreementStatus {
    INIT = 0;
    COMPLETED = 1;
  }
  AgreementStatus status = 5;
}

message FileMetaInfo {
  string creator_id = 1; // Consider renaming to creator_id
  string file_hash = 2;
  uint64 file_size = 3;
  uint64 shard_count = 4;
  repeated Agreement agreements = 5; // StorageAgreement as in Greenfield
}
